[bugfix]: fix height scrollbar horizontal

--- a/style/components/checkbox.css
+++ b/style/components/checkbox.css
@@ -18,6 +18,18 @@
     background-repeat: no-repeat;
 }
 
+.m-checkbox:hover::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    height: 20px;
+    width: 20px;
+    background-image: url("../../assets/Icons/ic_Checkbox_Hover.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .m-checkbox:checked::after {
     content: "";
     position: absolute;
